added HTML content

--- a/index.html
+++ b/index.html
@@ -7,20 +7,66 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
+        <!-- Name and links to sections -->
         <header>
-            <!-- Name and links to sections -->
+            <h1>
+                <a href="/">Sharee Burkeen</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#my-work">My Work</a>
+                    </li>
+                    <li>
+                        <a href="#contact-me">Contact Me</a>
+                    </li>
+                    <li>
+                        <a href="#my-resume">My Resume</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
-        <section>
-            <!-- Banner with background image, picture, and subtitle-->
+        <!-- Banner with background image, picture, and subtitle-->
+        <section class="tag-line">
+            <div class="picture"></div>
+            <span>Research professional by day.</span>
+            <span>Student coder by night... and weekends.</span>
         </section>
-        <section>
-            <!-- About Me-->
+        <!-- About Me-->
+        <section class="about-me" id="about-me">
+            <h2>About Me</h2>
+            <ul>
+                <li>AAS Computer Aided Drafting and Design</li>
+                <li>Over 20 years in Healthcare and Research</li>
+                <li>Learning new skills to move my career in a new direction</li>
+            </ul>
+                <h3>Skills I am currently perfecting</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
         </section>
-        <section>
-            <!-- My Work-->
+        <!-- My Work-->
+        <section class="my-work" id="my-work">
+            <h2>My Work</h2>
+            <div class="work-grid">
+                <div class="work-item1"></div>
+                <div class="work-item2"></div>
+                <div class="work-item3"></div>
+                <div class="work-item4"></div>
+                <div class="work-item5"></div>
+            </div>
         </section>
-        <footer>
-            <!-- Contact Me with phone, eamil, github-->
+        <!-- Contact Me with phone, eamil, github-->
+        <footer id="contact-me">
+            <h2>Contact Me</h2>
+            <span>931.996.1746</span>
+            <a href="mailto:shareeburkeen@yahoo.com">shareeburkeen@yahoo.com</a>
+            <a href="https://github.com/sharee-k" target="blank">My GitHub</a>
         </footer>
     </body>
 </html>
