added style to nav bar and banner-hero

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sharee Burkeen</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+        </style>
     </head>
     <body>
         <!-- Name and links to sections -->
         <header>
-            <h1>
-                <a href="/">Sharee Burkeen</a>
-            </h1>
+            <h1>Sharee Burkeen</h1>
             <nav>
                 <ul>
                     <li>
@@ -30,10 +31,14 @@
             </nav>
         </header>
         <!-- Banner with background image, picture, and subtitle-->
-        <section class="tag-line">
-            <div class="picture"></div>
-            <span>Research professional by day.</span>
-            <span>Student coder by night... and weekends.</span>
+        <section class="banner-hero">
+            <div class="banner-picture">
+                <img src="./assets/images/sharee-pic-2.jpg" alt="picture of sharee" width="200px" height="250px"/>
+            </div>
+            <div class="banner-content">
+                <h2>Student developer</h2>
+                <p>Learning is not attained by chance, it must be sought for with ardor and attended to with diligence. - Abigail Adams</p>
+            </div>
         </section>
         <!-- About Me-->
         <section class="about-me" id="about-me">
