added style to About Me section

--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
                 <li>Over 20 years in Healthcare and Research</li>
                 <li>Learning new skills to move my career in a new direction</li>
             </ul>
+            <div class="skills">
                 <h3>Skills I am currently perfecting</h3>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
                 </ul>
+            </div>
         </section>
         <!-- My Work-->
         <section class="my-work" id="my-work">
