--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2>About Me</h2>
             <ul>
                 <li>AAS Computer Aided Drafting and Design</li>
-                <li>Over 20 years in Healthcare and Research</li>
+                <li>20+ years in Healthcare and Research</li>
                 <li>Learning new skills to move my career in a new direction</li>
             </ul>
             <div class="skills">
@@ -61,11 +61,22 @@
         <section class="my-work" id="my-work">
             <h2>My Work</h2>
             <div class="work-grid">
-                <div class="work-item1"></div>
-                <div class="work-item2"></div>
-                <div class="work-item3"></div>
-                <div class="work-item4"></div>
-                <div class="work-item5"></div>
+                <div class="work-item run-buddy">
+                    <h3>Run Buddy</h3>
+                    <span>HTML CSS</span>
+                </div>
+                <div class="work-item coming-soon">
+                    <span>New projects comming soon</span>
+                </div>
+                <div class="work-item under-construction">
+                    <span>Come back later for new content</span>
+                </div>
+                <div class="work-item coming-soon">
+                    <span>New projects comming soon</span>
+                </div>
+                <div class="work-item under-construction">
+                    <span>Come back later for new content</span>
+                </div>
             </div>
         </section>
         <!-- Contact Me with phone, eamil, github-->
