added animation to nav bar links

--- a/index.html
+++ b/index.html
@@ -40,51 +40,59 @@
                 <p>Learning is not attained by chance, it must be sought for with ardor and attended to with diligence. - Abigail Adams</p>
             </div>
         </section>
-        <!-- About Me-->
-        <section class="about-me" id="about-me">
-            <h2>About Me</h2>
-            <ul>
-                <li>AAS Computer Aided Drafting and Design</li>
-                <li>20+ years in Healthcare and Research</li>
-                <li>Learning new skills to move my career in a new direction</li>
-            </ul>
-            <div class="skills">
-                <h3>Skills I am currently perfecting</h3>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
+        <main>
+            <!-- About Me-->
+            <section class="main-section about-me" id="about-me">
+                <h2 class="content-header">About Me</h2>
+                <div class="section-content">
+                    <div class="education-work">
+                        <ul>
+                            <li>AAS Computer Aided Drafting and Design</li>
+                            <li>20+ years in Healthcare and Research</li>
+                            <li>Learning new skills to move my career in a new direction</li>
+                        </ul>
+                    </div>
+                    <div class="skills">
+                        <h3>Skills I am currently perfecting</h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
             </div>
-        </section>
-        <!-- My Work-->
-        <section class="my-work" id="my-work">
-            <h2>My Work</h2>
-            <div class="work-grid">
-                <div class="work-item run-buddy">
-                    <h3>Run Buddy</h3>
-                    <span>HTML CSS</span>
+            </section>
+            <!-- My Work-->
+            <section class="main-section my-work" id="my-work">
+                <h2 class="content-header">My Work</h2>
+                <div class="work-grid section-content">
+                    <div class="work-item run-buddy">
+                        <h3>Run Buddy</h3>
+                        <span>HTML CSS</span>
+                    </div>
+                    <div class="work-item coming-soon">
+                        <span>New projects comming soon</span>
+                    </div>
+                    <div class="work-item under-construction">
+                        <span>Come back later for new content</span>
+                    </div>
+                    <div class="work-item coming-soon">
+                        <span>New projects comming soon</span>
+                    </div>
+                    <div class="work-item under-construction">
+                        <span>Come back later for new content</span>
+                    </div>
                 </div>
-                <div class="work-item coming-soon">
-                    <span>New projects comming soon</span>
+            </section>
+            <!-- Contact Me with phone, eamil, github-->
+            <section class="main-section contact-me" id="contact-me" >
+                <h2 class="content-header">Contact Me</h2>
+                <div class="section-content contact-info">
+                    <span>P: 931.996.1746</span>
+                    <a href="mailto:shareeburkeen@yahoo.com">E: shareeburkeen@yahoo.com</a>
+                    <a href="https://github.com/sharee-k" target="blank">My GitHub</a>
                 </div>
-                <div class="work-item under-construction">
-                    <span>Come back later for new content</span>
-                </div>
-                <div class="work-item coming-soon">
-                    <span>New projects comming soon</span>
-                </div>
-                <div class="work-item under-construction">
-                    <span>Come back later for new content</span>
-                </div>
-            </div>
-        </section>
-        <!-- Contact Me with phone, eamil, github-->
-        <footer id="contact-me">
-            <h2>Contact Me</h2>
-            <span>931.996.1746</span>
-            <a href="mailto:shareeburkeen@yahoo.com">shareeburkeen@yahoo.com</a>
-            <a href="https://github.com/sharee-k" target="blank">My GitHub</a>
-        </footer>
+            </section>
+        </main>
     </body>
 </html>
