added style and animation to Contact Me section

--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
             <section class="main-section contact-me" id="contact-me" >
                 <h2 class="content-header">Contact Me</h2>
                 <div class="section-content contact-info">
-                    <span>P: 931.996.1746</span>
+                    <a href="tel:9319961746">P: 931.996.1746</a>
                     <a href="mailto:shareeburkeen@yahoo.com">E: shareeburkeen@yahoo.com</a>
-                    <a href="https://github.com/sharee-k" target="blank">My GitHub</a>
+                    <a href="https://github.com/sharee-k" target="_blank">My GitHub</a>
+                    <a href="https://www.linkedin.com/in/sharee-burkeen-490a9649/" target="_blank">My LinkedIn</a>
                 </div>
             </section>
         </main>
