--- a/index.html
+++ b/index.html
@@ -66,22 +66,36 @@
             <section class="main-section my-work" id="my-work">
                 <h2 class="content-header">My Work</h2>
                 <div class="work-grid section-content">
-                    <div class="work-item run-buddy">
-                        <h3>Run Buddy</h3>
-                        <span>HTML CSS</span>
-                    </div>
-                    <div class="work-item coming-soon">
-                        <span>New projects comming soon</span>
-                    </div>
-                    <div class="work-item under-construction">
-                        <span>Come back later for new content</span>
-                    </div>
-                    <div class="work-item coming-soon">
-                        <span>New projects comming soon</span>
-                    </div>
-                    <div class="work-item under-construction">
-                        <span>Come back later for new content</span>
-                    </div>
+                    <a href="https://sharee-k.github.io/run-buddy/" target="_blank" class="work-item run-buddy">
+                        <div>
+                            <h3>Run Buddy</h3>
+                            <span>HTML CSS</span>
+                        </div>
+                    </a>
+                    <a href="./assets/images/under-construction-2.jpg" target="_blank" class="work-item coming-soon">
+                        <div>
+                            <h3>New Project</h3>
+                            <span>Coming Soon</span>
+                        </div>
+                    </a>
+                    <a href="./assets/images/under-construction-2.jpg" target="_blank" class="work-item under-construction">
+                        <div>
+                            <h3>New Project</h3>
+                            <span>Under Construction</span>
+                        </div>
+                    </a>
+                    <a href="./assets/images/under-construction-2.jpg" target="_blank" class="work-item coming-soon">
+                        <div>
+                            <h3>New Project</h3>
+                            <span>Coming Soon</span>
+                        </div>
+                    </a>
+                    <a href="./assets/images/under-construction-2.jpg" target="_blank" class="work-item under-construction">
+                        <div>
+                            <h3>New Project</h3>
+                            <span>Under Construction</span>
+                        </div>
+                    </a>
                 </div>
             </section>
             <!-- Contact Me with phone, eamil, github-->
