added media query

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <!-- About Me-->
             <section class="main-section about-me" id="about-me">
                 <h2 class="content-header">About Me</h2>
-                <div class="section-content">
+                <div class="about-me-div section-content">
                     <div class="education-work">
                         <ul>
                             <li>AAS Computer Aided Drafting and Design</li>
@@ -60,7 +60,7 @@
                             <li>JavaScript</li>
                         </ul>
                     </div>
-            </div>
+                </div>
             </section>
             <!-- My Work-->
             <section class="main-section my-work" id="my-work">
@@ -101,7 +101,7 @@
             <!-- Contact Me with phone, eamil, github-->
             <section class="main-section contact-me" id="contact-me" >
                 <h2 class="content-header">Contact Me</h2>
-                <div class="section-content contact-info">
+                <div class="contact-info section-content">
                     <a href="tel:9319961746">P: 931.996.1746</a>
                     <a href="mailto:shareeburkeen@yahoo.com">E: shareeburkeen@yahoo.com</a>
                     <a href="https://github.com/sharee-k" target="_blank">My GitHub</a>
