added link to resume

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="#my-resume">My Resume</a>
+                        <a href="./assets/files/sharee-resume.doc" target="-blank">My Resume</a>
                     </li>
                 </ul>
             </nav>
