added new project

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="./assets/files/sharee-resume.doc" target="-blank">My Resume</a>
+                        <a href="./assets/files/sharee-resume.doc" target="_blank">My Resume</a>
                     </li>
                 </ul>
             </nav>
@@ -66,16 +66,16 @@
             <section class="main-section my-work" id="my-work">
                 <h2 class="content-header">My Work</h2>
                 <div class="work-grid section-content">
+                    <a href="https://taylornyquist.github.io/project-1/" target="_blank" class="work-item spontaneous-adventurer">
+                        <div>
+                            <h3>Spontaneous Adventurer</h3>
+                            <span>HTML CSS JS</span>
+                        </div>
+                    </a>
                     <a href="https://sharee-k.github.io/run-buddy/" target="_blank" class="work-item run-buddy">
                         <div>
                             <h3>Run Buddy</h3>
                             <span>HTML CSS</span>
-                        </div>
-                    </a>
-                    <a href="./assets/images/under-construction-2.jpg" target="_blank" class="work-item coming-soon">
-                        <div>
-                            <h3>New Project</h3>
-                            <span>Coming Soon</span>
                         </div>
                     </a>
                     <a href="./assets/images/under-construction-2.jpg" target="_blank" class="work-item under-construction">
